syntax="proto3";

option go_package="calculator/calculatorpb";

message CalculateRequest{
    int32 first_num = 1;
    int32 second_num = 2;
}

message CalculateResponse{
    int32 result = 1;
}

service CalculatorService{
    rpc Sum (CalculateRequest) returns (CalculateResponse);
}